# rtx-telemetry-system

./: .gitignore  README.md
backend/: .env.example  agent.py  ai_server.py  main.py  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  page.tsx
dashboard/src/lib/: supabase.ts
